# gha_move_major_version_tag

./: BUILD.bazel  README.md  WORKSPACE  action.yml  deps.bzl  do_action.sh  move_major_version_tag.sh
.github/workflows/: ci.yml  move_major_ver_tag_on_release.yml
tests/: BUILD.bazel  move_major_version_tag_test.sh
